Bugfix css: Overflow for App and Service View

--- a/frontend/app/assets/app.css
+++ b/frontend/app/assets/app.css
@@ -557,7 +557,6 @@ button.md-icon-button.table-cell-menu-button, .md-button.md-icon-button.table-ce
   color: #444;
   margin-top: 0;
   margin-bottom: 0;
-  overflow: scroll;
 }
 .single-instance .instance-bindings {
   padding:0 16px;
